--- a/src/layout/default/index.hbs
+++ b/src/layout/default/index.hbs
@@ -23,23 +23,24 @@
 	{{!-- Підключаємо файл стилів layout --}}
 	<link href='dist/css/layout/default/index.css' rel='stylesheet' />
 	{{!-- Підключаємо файл скриптів layout --}}
-	<script src="dist/js/layout/default/index.js"></script>
+	<script defer src="dist/js/layout/default/index.js"></script>
 
 	{{!-- Підключаємо файл стилів container --}}
 	<link href='dist/css/container/{{name}}/index.css' rel='stylesheet' />
 	{{!-- Підключаємо файл скриптів container --}}
-	<script src="dist/js/container/{{name}}/index.js"></script>
+	<script defer src="dist/js/container/{{name}}/index.js"></script>
 
 	{{#each component}}
 	{{!-- Підключаємо файл стилів component --}}
 	<link href='dist/css/component/{{this}}/index.css' rel='stylesheet' />
 	{{!-- Підключаємо файл скриптів component --}}
-	<script src="dist/js/component/{{this}}/index.js"></script>
+	<script defer src="dist/js/component/{{this}}/index.js"></script>
 	{{/each}}
 
 </head>
 
 <body>
+	<script src="dist/js/container/{{name}}/index.js"></script>
 
 	{{! ↓ ця кострукція показує куди шаблонізатору треба вставляти код з container файлу }}
 	{{{body}}}
